<resources>
    <string name="app_name">What To Do</string>
    <string name="edit_text_hint_item">Item da lista</string>
    <string name="btt_insert">Inserir</string>
    <string name="hint_task_edit_text">Tarefa</string>
    <string name="hint_hour">Horário</string>
    <string name="hint_date">Data</string>
    <string name="hint_product_edit_text">Produto</string>
    <string name="hint_product_quantity">Quantidade</string>
    <string name="hint_title_list">Título da lista</string>
    <string name="description_add_fab">Add</string>
    <string name="description_add_list_task_fab">Add task list</string>
    <string name="description_add_list_product_fab">Add product list</string>
    <string name="description_spinner_unity">Unity of measure</string>
    <string name="description_save_fab">Save</string>
    <string name="title_home">Listas</string>
    <string name="title_registration_task">Cadastrar tarefa</string>
    <string name="title_registration_product">Cadastrar produto</string>
</resources>