<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    android:orientation="vertical"
    tools:context=".TaskRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/title_registration_product"
            android:textSize="@dimen/title1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_product"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heigth_default_edit_text"
            android:hint="@string/hint_product_edit_text"
            android:inputType="text"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <EditText
              android:id="@+id/txt_quantity_product"
              android:layout_width="0dp"
              android:layout_weight="80"
              android:layout_height="@dimen/heigth_default_edit_text"
              android:hint="@string/hint_product_quantity"
              android:inputType="numberDecimal" />

          <Spinner
              android:id="@+id/txt_unit_product"
              android:layout_width="@dimen/width_spinner"
              android:layout_height="@dimen/width_spinner"
              android:layout_weight="20"
              android:contentDescription="@string/description_spinner_unity"/>
      </LinearLayout>

        <Button
            android:id="@+id/btn_insert_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/btt_insert" />
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_view_product"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_product"
        android:contentDescription="@string/description_save_fab"
        android:src="@drawable/save_fab"
        android:background="@color/red"
        android:backgroundTint="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>